--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,10 @@ django-crispy-forms==2.0
 django-heroku==0.3.1
 django-js-asset==2.0.0
 gunicorn==20.1.0
+heroku==0.1.4
+idna==3.4
 psycopg2==2.9.6
-python-dateutil==2.8.2
+python-dateutil==1.5
 python-decouple==3.8
 pytz==2023.3
 requests==2.28.2
